--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <meta name="serp-rank" position="1"/>
     <link rel="icon" type="image/png" href="public/images/favicons/default-favicon.png" />
     <link rel="canonical" href="https://www.wittycircle.com" />
-    <link rel="publisher" href="https://plus.google.com/104066516895208794319/about" />
+    <link rel="publisher" href="https://plus.google.com/104066516895208794319/about" />  <link href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/css/swiper.min.css" rel="stylesheet">
+
 
 </head>
 <body>
